# ProgramlamaDilleri_API

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
ProgramlamaDilleri_API/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: author.yaml  category.yaml  documents.yaml  resource.yaml  user.yaml
prodil/: admin.py  apps.py  asgi.py  filters.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
prodil/api/: serializers.py  urls.py  views.py
prodil/auth/: admin.py  apps.py  models.py
prodil/auth/migrations/: 0001_initial.py
prodil/botuser/: admin.py  apps.py  models.py
prodil/botuser/migrations/: 0001_initial.py  0002_auto_20220928_1714.py
prodil/management/commands/: initdb.py
prodil/migrations/: 0001_initial.py  0002_auto_20210818_1154.py  0003_auto_20210819_2253.py  0004_auto_20210820_2002.py  0005_auto_20210820_2356.py  0006_auto_20210823_1829.py
prodil/record/: admin.py  apps.py  filters.py  managers.py  models.py  signals.py
prodil/record/api/: serializers.py  urls.py  views.py
prodil/record/migrations/: 0001_initial.py  0002_auto_20211031_2105.py  0003_auto_20211114_1934.py  0004_alter_category_order.py  0005_auto_20211204_1637.py
prodil/record/templates/: index.html
prodil/static/css/: base.css
prodil/static/record/: style.css
prodil/templates/: base.html
prodil/templates/prodil/: create.html  delete.html  detail.html  edit.html  index.html  res_list.html
prodil/templates/prodil/registration/: login.html  logout.html
prodil/templatetags/: prodil.py
profiles/: admin.py  models.py
profiles/migrations/: 0001_initial.py
