[tool.poetry]
name = "prodil"
version = "0.1.0"
description = "Admin Panel and API for Programlama Dilleri Telegram Bot"
authors = ["ahmetveburak <ahmetbozyurtt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
djangorestframework-api-key = "^2.0.0"
Pillow = "^8.3.1"
easy-thumbnails = "^2.7.1"
django-uuslug = "2.0.0"
django-filter = "^21.1"
drf-spectacular = "^0.21.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | .+/migrations
)/
'''

[tool.isort]
line_length = 119
skip_gitignore = true
skip_glob = "*/migrations/*.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
